# whatcanidew

./: .gitignore  DEW_BRAND_VOICE.md  DEW_FLIGHT_HANDOFF.md  DEW_PIPELINE.md  EPIC.md  FHIR.md  HIPAA.md  KIRO_CONTEXT.md  ORCHESTRATOR_NOTE.md  QUICKSTART.md  README.md  entry_point.py  graph_weight_mapper.py  index.html  intent_weight_synthesizer.py  logger.py  start.bat  startup_hook.py  tree_topology_heuristics.py
docker/: Dockerfile  server.py
npm/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
postgres/: tree_topology_heuristics.sql
pypi/: entry_point.py  graph_weight_mapper.py  health.py  intent_weight_synthesizer.py  obscura.py  profile_store.py  pyproject.toml  repoe_adapter.py  ripple.py  startup_hook.py  tree_topology_heuristics.py
repoe_dew/: CHANGES.md
repoe_dew/git/: config  index  packed_refs
repoe_dew/git/logs/refs/heads/: master
repoe_dew/git/objects/pack/: pack_9a0295c171b91b90e2bf047b836897e64169215e.idx  pack_9a0295c171b91b90e2bf047b836897e64169215e.rev
repoe_dew/git/refs/heads/: master
tests/: conftest.py  mock_scheduler.py  test_api.py  test_core.py  test_dir_reorganizer.py  test_entry_point.py  test_hospital.py  test_logger.py  test_obscura.py  test_repoe_adapter.py  test_ripple.py  test_weight_mapper.py
