[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dew"
version = "1.0.0"
description = "Shortest path between any two nodes in any connected graph. BFS and Dijkstra. Zero dependencies."
requires-python = ">=3.8"
license = { text = "TBD — pending legal review" }
keywords = ["graph", "pathfinding", "topology", "BFS", "dijkstra", "supply-chain", "skill-tree"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
]

[tool.setuptools]
py-modules = ["tree_topology_heuristics", "logger", "intent_weight_synthesizer", "graph_weight_mapper", "entry_point", "health", "startup_hook"]

[project.urls]
Homepage = "https://github.com/UndeadYoshi024/whatcanidew"
